--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
 		"noPropertyAccessFromIndexSignature": true,
 		"noFallthroughCasesInSwitch": true,
 		"verbatimModuleSyntax": true,
-		"useDefineForClassFields": true,
+		"useDefineForClassFields": true
 	},
-	"exclude": ["node_modules", "/types"],
+	"exclude": ["node_modules", "/types"]
 }
