--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
 	"type": "module",
 	"files": [],
 	"scripts": {},
-	"devDependencies": {
-		"typescript": "^5.4.3"
-	},
+	"devDependencies": {},
 	"keywords": [],
 	"packageManager": "npm@10.5.0+sha256.17ca6e08e7633b624e8f870db81a78f46afe119de62bcaf0a7407574139198fc",
 	"engines": {
