--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "graphql_parser"]
 	path = graphql_parser
-	url = https://github.com/thetarnav/odin-graphql-parser
+	url = git@github.com:thetarnav/odin-graphql-parser.git
