Add test workflow

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 	"sideEffects": false,
 	"type": "module",
 	"files": [],
-	"scripts": {},
+	"scripts": {
+		"test": "node --test",
+		"typecheck": "tsc --noEmit"
+	},
 	"devDependencies": {
 		"@types/node": "^20.11.30",
 		"typescript": "^5.4.3"
