Add wasm_generate_queries to sdk.js

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 	"private": false,
 	"sideEffects": false,
 	"type": "module",
-	"files": ["cli.js"],
-	"bin": "./cli.js",
+	"files": [
+		"./sdk.js",
+		"./graphstate.wasm"
+	],
 	"scripts": {
 		"test": "node --test",
 		"typecheck": "tsc --noEmit"
