Replace build.sh with a node build script. Emit types.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,14 @@
 graphstate
 graphstate.wasm
 _client.js
+sdk.d.ts
+sdk.d.ts.map
 
 # Node
 node_modules
 
 # Odin
 ols.json
+
+# VSCode
+.vscode/settings.json
