--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,10 +29,10 @@ jobs:
         run: npm install
 
       - name: Build binary
-        run: ./build.sh
+        run: node build.js release
 
       - name: Build client
-        run: ./build.sh client
+        run: node build.js client
       
       - name: Run tests
         run: node --test
